tests: Migrate ProjectionMatchers & isSQL to assertj